# VeraWeb

./: package-lock.json  package.json  tailwind.config.ts
public/truth-terminal/: index.html
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/mission/: Mission.module.scss  page.tsx
src/app/roadmap/: Roadmap.module.scss  page.tsx
src/app/tokenomics/: Tokenomics.module.scss  page.tsx
src/components/Button/: Button.module.scss  Button.tsx  BuyTruthButton.module.scss  BuyTruthButton.tsx  CopyCAButton.module.scss  CopyCAButton.tsx
src/components/Header/: Header.module.scss  Header.tsx
src/components/sections/ContentCards/: ContentCards.module.scss  ContentCards.tsx
src/components/sections/CoreValues/: CoreValues.module.scss  CoreValues.tsx
src/components/sections/FAQ/: FAQ.module.scss  FAQ.tsx
src/components/sections/Footer/: Footer.module.css  Footer.tsx
src/components/sections/HeroSection/: HeroSection.module.scss  HeroSection.tsx
src/components/sections/Staking/: Staking.module.scss  Staking.tsx
src/components/sections/Tokenomics/: Tokenomics.module.css  Tokenomics.module.scss  Tokenomics.tsx
src/components/sections/VideoComponent/: VideoComponent.tsx  index.module.scss
